Fixed background not showing up.

--- a/Assets/CSS/Style.css
+++ b/Assets/CSS/Style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('/Assets/Images/Splatter.jpg');
+    background-image: url('Assets/Images/Splatter.jpg');
     background-repeat: no-repeat;
 }
 
